--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # The URL the site will be built for
-base_url = "https://altanozlu.github.io"
+base_url = "https://altan.ozlu.eu"
 
 # Whether to automatically compile all Sass files in the sass directory
 compile_sass = true
